parse/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    RESERVED_LINE
    RESERVED
    MULTI_COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> header definition tail
Rule 2     start -> header tail
Rule 3     tail -> comment
Rule 4     tail -> <empty>
Rule 5     comment -> SINGLE_COMMENT comment
Rule 6     comment -> SINGLE_COMMENT
Rule 7     header -> header header_unit_
Rule 8     header -> header_unit_
Rule 9     header_unit_ -> comment header_unit LINE_END
Rule 10    header_unit_ -> header_unit LINE_END
Rule 11    header_unit -> syntax
Rule 12    header_unit -> package
Rule 13    header_unit -> import
Rule 14    header_unit -> option
Rule 15    syntax -> SYNTAX = LITERAL
Rule 16    package -> PACKAGE IDENTIFIER
Rule 17    import -> IMPORT LITERAL
Rule 18    option -> OPTION IDENTIFIER = LITERAL
Rule 19    definition -> definition definition_unit_
Rule 20    definition -> definition_unit_
Rule 21    definition_unit_ -> comment definition_unit
Rule 22    definition_unit_ -> definition_unit
Rule 23    definition_unit -> message
Rule 24    definition_unit -> enum
Rule 25    message -> MESSAGE IDENTIFIER { msg_fields DEFINITION_END
Rule 26    msg_fields -> msg_fields msg_field_
Rule 27    msg_fields -> <empty>
Rule 28    msg_field_ -> comment msg_field LINE_END
Rule 29    msg_field_ -> msg_field LINE_END
Rule 30    msg_field -> field_decoration field_type IDENTIFIER = INTCONSTANT
Rule 31    field_decoration -> OPTIONAL
Rule 32    field_decoration -> REPEATED
Rule 33    field_decoration -> <empty>
Rule 34    field_type -> ref_type
Rule 35    field_type -> definition_type
Rule 36    ref_type -> IDENTIFIER
Rule 37    ref_type -> IDENTIFIER . IDENTIFIER
Rule 38    definition_type -> base_type
Rule 39    definition_type -> container_type
Rule 40    base_type -> BOOL
Rule 41    base_type -> STRING
Rule 42    base_type -> BYTES
Rule 43    base_type -> DOUBLE
Rule 44    base_type -> FLOAT
Rule 45    base_type -> INT32
Rule 46    base_type -> INT64
Rule 47    base_type -> UINT32
Rule 48    base_type -> UINT64
Rule 49    base_type -> SINT32
Rule 50    base_type -> SINT64
Rule 51    base_type -> FIXED32
Rule 52    base_type -> FIXED64
Rule 53    base_type -> SFIXED32
Rule 54    base_type -> SFIXED64
Rule 55    container_type -> map_type
Rule 56    map_type -> MAP < base_type , base_type >
Rule 57    map_type -> MAP < base_type , ref_type >
Rule 58    enum -> ENUM IDENTIFIER { enum_fields DEFINITION_END
Rule 59    enum_fields -> enum_fields enum_field_
Rule 60    enum_fields -> <empty>
Rule 61    enum_field_ -> comment enum_field LINE_END
Rule 62    enum_field_ -> enum_field LINE_END
Rule 63    enum_field -> IDENTIFIER = INTCONSTANT

Terminals, with rules where they appear

,                    : 56 57
.                    : 37
<                    : 56 57
=                    : 15 18 30 63
>                    : 56 57
BOOL                 : 40
BYTES                : 42
DEFINITION_END       : 25 58
DOUBLE               : 43
ENUM                 : 58
FIXED32              : 51
FIXED64              : 52
FLOAT                : 44
IDENTIFIER           : 16 18 25 30 36 37 37 58 63
IMPORT               : 17
INT32                : 45
INT64                : 46
INTCONSTANT          : 30 63
LINE_END             : 9 10 28 29 61 62
LITERAL              : 15 17 18
MAP                  : 56 57
MESSAGE              : 25
MULTI_COMMENT        : 
OPTION               : 18
OPTIONAL             : 31
PACKAGE              : 16
REPEATED             : 32
RESERVED             : 
RESERVED_LINE        : 
SFIXED32             : 53
SFIXED64             : 54
SINGLE_COMMENT       : 5 6
SINT32               : 49
SINT64               : 50
STRING               : 41
SYNTAX               : 15
UINT32               : 47
UINT64               : 48
error                : 
{                    : 25 58

Nonterminals, with rules where they appear

base_type            : 38 56 56 57
comment              : 3 5 9 21 28 61
container_type       : 39
definition           : 1 19
definition_type      : 35
definition_unit      : 21 22
definition_unit_     : 19 20
enum                 : 24
enum_field           : 61 62
enum_field_          : 59
enum_fields          : 58 59
field_decoration     : 30
field_type           : 30
header               : 1 2 7
header_unit          : 9 10
header_unit_         : 7 8
import               : 13
map_type             : 55
message              : 23
msg_field            : 28 29
msg_field_           : 26
msg_fields           : 25 26
option               : 14
package              : 12
ref_type             : 34 57
start                : 0
syntax               : 11
tail                 : 1 2

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . header definition tail
    (2) start -> . header tail
    (7) header -> . header header_unit_
    (8) header -> . header_unit_
    (9) header_unit_ -> . comment header_unit LINE_END
    (10) header_unit_ -> . header_unit LINE_END
    (5) comment -> . SINGLE_COMMENT comment
    (6) comment -> . SINGLE_COMMENT
    (11) header_unit -> . syntax
    (12) header_unit -> . package
    (13) header_unit -> . import
    (14) header_unit -> . option
    (15) syntax -> . SYNTAX = LITERAL
    (16) package -> . PACKAGE IDENTIFIER
    (17) import -> . IMPORT LITERAL
    (18) option -> . OPTION IDENTIFIER = LITERAL

    SINGLE_COMMENT  shift and go to state 8
    SYNTAX          shift and go to state 13
    PACKAGE         shift and go to state 14
    IMPORT          shift and go to state 10
    OPTION          shift and go to state 11

    comment                        shift and go to state 1
    package                        shift and go to state 2
    header_unit                    shift and go to state 3
    option                         shift and go to state 4
    header                         shift and go to state 5
    header_unit_                   shift and go to state 6
    syntax                         shift and go to state 7
    start                          shift and go to state 9
    import                         shift and go to state 12

state 1

    (9) header_unit_ -> comment . header_unit LINE_END
    (11) header_unit -> . syntax
    (12) header_unit -> . package
    (13) header_unit -> . import
    (14) header_unit -> . option
    (15) syntax -> . SYNTAX = LITERAL
    (16) package -> . PACKAGE IDENTIFIER
    (17) import -> . IMPORT LITERAL
    (18) option -> . OPTION IDENTIFIER = LITERAL

    SYNTAX          shift and go to state 13
    PACKAGE         shift and go to state 14
    IMPORT          shift and go to state 10
    OPTION          shift and go to state 11

    header_unit                    shift and go to state 15
    option                         shift and go to state 4
    package                        shift and go to state 2
    syntax                         shift and go to state 7
    import                         shift and go to state 12

state 2

    (12) header_unit -> package .

    LINE_END        reduce using rule 12 (header_unit -> package .)


state 3

    (10) header_unit_ -> header_unit . LINE_END

    LINE_END        shift and go to state 16


state 4

    (14) header_unit -> option .

    LINE_END        reduce using rule 14 (header_unit -> option .)


state 5

    (1) start -> header . definition tail
    (2) start -> header . tail
    (7) header -> header . header_unit_
    (19) definition -> . definition definition_unit_
    (20) definition -> . definition_unit_
    (3) tail -> . comment
    (4) tail -> .
    (9) header_unit_ -> . comment header_unit LINE_END
    (10) header_unit_ -> . header_unit LINE_END
    (21) definition_unit_ -> . comment definition_unit
    (22) definition_unit_ -> . definition_unit
    (5) comment -> . SINGLE_COMMENT comment
    (6) comment -> . SINGLE_COMMENT
    (11) header_unit -> . syntax
    (12) header_unit -> . package
    (13) header_unit -> . import
    (14) header_unit -> . option
    (23) definition_unit -> . message
    (24) definition_unit -> . enum
    (15) syntax -> . SYNTAX = LITERAL
    (16) package -> . PACKAGE IDENTIFIER
    (17) import -> . IMPORT LITERAL
    (18) option -> . OPTION IDENTIFIER = LITERAL
    (25) message -> . MESSAGE IDENTIFIER { msg_fields DEFINITION_END
    (58) enum -> . ENUM IDENTIFIER { enum_fields DEFINITION_END

    $end            reduce using rule 4 (tail -> .)
    SINGLE_COMMENT  shift and go to state 8
    SYNTAX          shift and go to state 13
    PACKAGE         shift and go to state 14
    IMPORT          shift and go to state 10
    OPTION          shift and go to state 11
    MESSAGE         shift and go to state 25
    ENUM            shift and go to state 21

    comment                        shift and go to state 17
    definition                     shift and go to state 23
    header_unit                    shift and go to state 3
    option                         shift and go to state 4
    enum                           shift and go to state 22
    package                        shift and go to state 2
    header_unit_                   shift and go to state 24
    syntax                         shift and go to state 7
    tail                           shift and go to state 20
    definition_unit_               shift and go to state 18
    import                         shift and go to state 12
    message                        shift and go to state 19
    definition_unit                shift and go to state 26

state 6

    (8) header -> header_unit_ .

    SINGLE_COMMENT  reduce using rule 8 (header -> header_unit_ .)
    SYNTAX          reduce using rule 8 (header -> header_unit_ .)
    PACKAGE         reduce using rule 8 (header -> header_unit_ .)
    IMPORT          reduce using rule 8 (header -> header_unit_ .)
    OPTION          reduce using rule 8 (header -> header_unit_ .)
    MESSAGE         reduce using rule 8 (header -> header_unit_ .)
    ENUM            reduce using rule 8 (header -> header_unit_ .)
    $end            reduce using rule 8 (header -> header_unit_ .)


state 7

    (11) header_unit -> syntax .

    LINE_END        reduce using rule 11 (header_unit -> syntax .)


state 8

    (5) comment -> SINGLE_COMMENT . comment
    (6) comment -> SINGLE_COMMENT .
    (5) comment -> . SINGLE_COMMENT comment
    (6) comment -> . SINGLE_COMMENT

    IDENTIFIER      reduce using rule 6 (comment -> SINGLE_COMMENT .)
    OPTIONAL        reduce using rule 6 (comment -> SINGLE_COMMENT .)
    REPEATED        reduce using rule 6 (comment -> SINGLE_COMMENT .)
    BOOL            reduce using rule 6 (comment -> SINGLE_COMMENT .)
    STRING          reduce using rule 6 (comment -> SINGLE_COMMENT .)
    BYTES           reduce using rule 6 (comment -> SINGLE_COMMENT .)
    DOUBLE          reduce using rule 6 (comment -> SINGLE_COMMENT .)
    FLOAT           reduce using rule 6 (comment -> SINGLE_COMMENT .)
    INT32           reduce using rule 6 (comment -> SINGLE_COMMENT .)
    INT64           reduce using rule 6 (comment -> SINGLE_COMMENT .)
    UINT32          reduce using rule 6 (comment -> SINGLE_COMMENT .)
    UINT64          reduce using rule 6 (comment -> SINGLE_COMMENT .)
    SINT32          reduce using rule 6 (comment -> SINGLE_COMMENT .)
    SINT64          reduce using rule 6 (comment -> SINGLE_COMMENT .)
    FIXED32         reduce using rule 6 (comment -> SINGLE_COMMENT .)
    FIXED64         reduce using rule 6 (comment -> SINGLE_COMMENT .)
    SFIXED32        reduce using rule 6 (comment -> SINGLE_COMMENT .)
    SFIXED64        reduce using rule 6 (comment -> SINGLE_COMMENT .)
    MAP             reduce using rule 6 (comment -> SINGLE_COMMENT .)
    SYNTAX          reduce using rule 6 (comment -> SINGLE_COMMENT .)
    PACKAGE         reduce using rule 6 (comment -> SINGLE_COMMENT .)
    IMPORT          reduce using rule 6 (comment -> SINGLE_COMMENT .)
    OPTION          reduce using rule 6 (comment -> SINGLE_COMMENT .)
    MESSAGE         reduce using rule 6 (comment -> SINGLE_COMMENT .)
    ENUM            reduce using rule 6 (comment -> SINGLE_COMMENT .)
    $end            reduce using rule 6 (comment -> SINGLE_COMMENT .)
    SINGLE_COMMENT  shift and go to state 8

    comment                        shift and go to state 27

state 9

    (0) S' -> start .



state 10

    (17) import -> IMPORT . LITERAL

    LITERAL         shift and go to state 28


state 11

    (18) option -> OPTION . IDENTIFIER = LITERAL

    IDENTIFIER      shift and go to state 29


state 12

    (13) header_unit -> import .

    LINE_END        reduce using rule 13 (header_unit -> import .)


state 13

    (15) syntax -> SYNTAX . = LITERAL

    =               shift and go to state 30


state 14

    (16) package -> PACKAGE . IDENTIFIER

    IDENTIFIER      shift and go to state 31


state 15

    (9) header_unit_ -> comment header_unit . LINE_END

    LINE_END        shift and go to state 32


state 16

    (10) header_unit_ -> header_unit LINE_END .

    SINGLE_COMMENT  reduce using rule 10 (header_unit_ -> header_unit LINE_END .)
    SYNTAX          reduce using rule 10 (header_unit_ -> header_unit LINE_END .)
    PACKAGE         reduce using rule 10 (header_unit_ -> header_unit LINE_END .)
    IMPORT          reduce using rule 10 (header_unit_ -> header_unit LINE_END .)
    OPTION          reduce using rule 10 (header_unit_ -> header_unit LINE_END .)
    MESSAGE         reduce using rule 10 (header_unit_ -> header_unit LINE_END .)
    ENUM            reduce using rule 10 (header_unit_ -> header_unit LINE_END .)
    $end            reduce using rule 10 (header_unit_ -> header_unit LINE_END .)


state 17

    (3) tail -> comment .
    (9) header_unit_ -> comment . header_unit LINE_END
    (21) definition_unit_ -> comment . definition_unit
    (11) header_unit -> . syntax
    (12) header_unit -> . package
    (13) header_unit -> . import
    (14) header_unit -> . option
    (23) definition_unit -> . message
    (24) definition_unit -> . enum
    (15) syntax -> . SYNTAX = LITERAL
    (16) package -> . PACKAGE IDENTIFIER
    (17) import -> . IMPORT LITERAL
    (18) option -> . OPTION IDENTIFIER = LITERAL
    (25) message -> . MESSAGE IDENTIFIER { msg_fields DEFINITION_END
    (58) enum -> . ENUM IDENTIFIER { enum_fields DEFINITION_END

    $end            reduce using rule 3 (tail -> comment .)
    SYNTAX          shift and go to state 13
    PACKAGE         shift and go to state 14
    IMPORT          shift and go to state 10
    OPTION          shift and go to state 11
    MESSAGE         shift and go to state 25
    ENUM            shift and go to state 21

    header_unit                    shift and go to state 15
    option                         shift and go to state 4
    package                        shift and go to state 2
    enum                           shift and go to state 22
    syntax                         shift and go to state 7
    import                         shift and go to state 12
    message                        shift and go to state 19
    definition_unit                shift and go to state 33

state 18

    (20) definition -> definition_unit_ .

    SINGLE_COMMENT  reduce using rule 20 (definition -> definition_unit_ .)
    MESSAGE         reduce using rule 20 (definition -> definition_unit_ .)
    ENUM            reduce using rule 20 (definition -> definition_unit_ .)
    $end            reduce using rule 20 (definition -> definition_unit_ .)


state 19

    (23) definition_unit -> message .

    SINGLE_COMMENT  reduce using rule 23 (definition_unit -> message .)
    MESSAGE         reduce using rule 23 (definition_unit -> message .)
    ENUM            reduce using rule 23 (definition_unit -> message .)
    $end            reduce using rule 23 (definition_unit -> message .)


state 20

    (2) start -> header tail .

    $end            reduce using rule 2 (start -> header tail .)


state 21

    (58) enum -> ENUM . IDENTIFIER { enum_fields DEFINITION_END

    IDENTIFIER      shift and go to state 34


state 22

    (24) definition_unit -> enum .

    SINGLE_COMMENT  reduce using rule 24 (definition_unit -> enum .)
    MESSAGE         reduce using rule 24 (definition_unit -> enum .)
    ENUM            reduce using rule 24 (definition_unit -> enum .)
    $end            reduce using rule 24 (definition_unit -> enum .)


state 23

    (1) start -> header definition . tail
    (19) definition -> definition . definition_unit_
    (3) tail -> . comment
    (4) tail -> .
    (21) definition_unit_ -> . comment definition_unit
    (22) definition_unit_ -> . definition_unit
    (5) comment -> . SINGLE_COMMENT comment
    (6) comment -> . SINGLE_COMMENT
    (23) definition_unit -> . message
    (24) definition_unit -> . enum
    (25) message -> . MESSAGE IDENTIFIER { msg_fields DEFINITION_END
    (58) enum -> . ENUM IDENTIFIER { enum_fields DEFINITION_END

    $end            reduce using rule 4 (tail -> .)
    SINGLE_COMMENT  shift and go to state 8
    MESSAGE         shift and go to state 25
    ENUM            shift and go to state 21

    comment                        shift and go to state 35
    enum                           shift and go to state 22
    tail                           shift and go to state 36
    definition_unit_               shift and go to state 37
    message                        shift and go to state 19
    definition_unit                shift and go to state 26

state 24

    (7) header -> header header_unit_ .

    SINGLE_COMMENT  reduce using rule 7 (header -> header header_unit_ .)
    SYNTAX          reduce using rule 7 (header -> header header_unit_ .)
    PACKAGE         reduce using rule 7 (header -> header header_unit_ .)
    IMPORT          reduce using rule 7 (header -> header header_unit_ .)
    OPTION          reduce using rule 7 (header -> header header_unit_ .)
    MESSAGE         reduce using rule 7 (header -> header header_unit_ .)
    ENUM            reduce using rule 7 (header -> header header_unit_ .)
    $end            reduce using rule 7 (header -> header header_unit_ .)


state 25

    (25) message -> MESSAGE . IDENTIFIER { msg_fields DEFINITION_END

    IDENTIFIER      shift and go to state 38


state 26

    (22) definition_unit_ -> definition_unit .

    SINGLE_COMMENT  reduce using rule 22 (definition_unit_ -> definition_unit .)
    MESSAGE         reduce using rule 22 (definition_unit_ -> definition_unit .)
    ENUM            reduce using rule 22 (definition_unit_ -> definition_unit .)
    $end            reduce using rule 22 (definition_unit_ -> definition_unit .)


state 27

    (5) comment -> SINGLE_COMMENT comment .

    IDENTIFIER      reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    OPTIONAL        reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    REPEATED        reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    BOOL            reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    STRING          reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    BYTES           reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    DOUBLE          reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    FLOAT           reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    INT32           reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    INT64           reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    UINT32          reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    UINT64          reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    SINT32          reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    SINT64          reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    FIXED32         reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    FIXED64         reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    SFIXED32        reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    SFIXED64        reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    MAP             reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    SYNTAX          reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    PACKAGE         reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    IMPORT          reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    OPTION          reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    MESSAGE         reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    ENUM            reduce using rule 5 (comment -> SINGLE_COMMENT comment .)
    $end            reduce using rule 5 (comment -> SINGLE_COMMENT comment .)


state 28

    (17) import -> IMPORT LITERAL .

    LINE_END        reduce using rule 17 (import -> IMPORT LITERAL .)


state 29

    (18) option -> OPTION IDENTIFIER . = LITERAL

    =               shift and go to state 39


state 30

    (15) syntax -> SYNTAX = . LITERAL

    LITERAL         shift and go to state 40


state 31

    (16) package -> PACKAGE IDENTIFIER .

    LINE_END        reduce using rule 16 (package -> PACKAGE IDENTIFIER .)


state 32

    (9) header_unit_ -> comment header_unit LINE_END .

    SINGLE_COMMENT  reduce using rule 9 (header_unit_ -> comment header_unit LINE_END .)
    SYNTAX          reduce using rule 9 (header_unit_ -> comment header_unit LINE_END .)
    PACKAGE         reduce using rule 9 (header_unit_ -> comment header_unit LINE_END .)
    IMPORT          reduce using rule 9 (header_unit_ -> comment header_unit LINE_END .)
    OPTION          reduce using rule 9 (header_unit_ -> comment header_unit LINE_END .)
    MESSAGE         reduce using rule 9 (header_unit_ -> comment header_unit LINE_END .)
    ENUM            reduce using rule 9 (header_unit_ -> comment header_unit LINE_END .)
    $end            reduce using rule 9 (header_unit_ -> comment header_unit LINE_END .)


state 33

    (21) definition_unit_ -> comment definition_unit .

    SINGLE_COMMENT  reduce using rule 21 (definition_unit_ -> comment definition_unit .)
    MESSAGE         reduce using rule 21 (definition_unit_ -> comment definition_unit .)
    ENUM            reduce using rule 21 (definition_unit_ -> comment definition_unit .)
    $end            reduce using rule 21 (definition_unit_ -> comment definition_unit .)


state 34

    (58) enum -> ENUM IDENTIFIER . { enum_fields DEFINITION_END

    {               shift and go to state 41


state 35

    (3) tail -> comment .
    (21) definition_unit_ -> comment . definition_unit
    (23) definition_unit -> . message
    (24) definition_unit -> . enum
    (25) message -> . MESSAGE IDENTIFIER { msg_fields DEFINITION_END
    (58) enum -> . ENUM IDENTIFIER { enum_fields DEFINITION_END

    $end            reduce using rule 3 (tail -> comment .)
    MESSAGE         shift and go to state 25
    ENUM            shift and go to state 21

    enum                           shift and go to state 22
    message                        shift and go to state 19
    definition_unit                shift and go to state 33

state 36

    (1) start -> header definition tail .

    $end            reduce using rule 1 (start -> header definition tail .)


state 37

    (19) definition -> definition definition_unit_ .

    SINGLE_COMMENT  reduce using rule 19 (definition -> definition definition_unit_ .)
    MESSAGE         reduce using rule 19 (definition -> definition definition_unit_ .)
    ENUM            reduce using rule 19 (definition -> definition definition_unit_ .)
    $end            reduce using rule 19 (definition -> definition definition_unit_ .)


state 38

    (25) message -> MESSAGE IDENTIFIER . { msg_fields DEFINITION_END

    {               shift and go to state 42


state 39

    (18) option -> OPTION IDENTIFIER = . LITERAL

    LITERAL         shift and go to state 43


state 40

    (15) syntax -> SYNTAX = LITERAL .

    LINE_END        reduce using rule 15 (syntax -> SYNTAX = LITERAL .)


state 41

    (58) enum -> ENUM IDENTIFIER { . enum_fields DEFINITION_END
    (59) enum_fields -> . enum_fields enum_field_
    (60) enum_fields -> .

    DEFINITION_END  reduce using rule 60 (enum_fields -> .)
    SINGLE_COMMENT  reduce using rule 60 (enum_fields -> .)
    IDENTIFIER      reduce using rule 60 (enum_fields -> .)

    enum_fields                    shift and go to state 44

state 42

    (25) message -> MESSAGE IDENTIFIER { . msg_fields DEFINITION_END
    (26) msg_fields -> . msg_fields msg_field_
    (27) msg_fields -> .

    DEFINITION_END  reduce using rule 27 (msg_fields -> .)
    SINGLE_COMMENT  reduce using rule 27 (msg_fields -> .)
    OPTIONAL        reduce using rule 27 (msg_fields -> .)
    REPEATED        reduce using rule 27 (msg_fields -> .)
    IDENTIFIER      reduce using rule 27 (msg_fields -> .)
    BOOL            reduce using rule 27 (msg_fields -> .)
    STRING          reduce using rule 27 (msg_fields -> .)
    BYTES           reduce using rule 27 (msg_fields -> .)
    DOUBLE          reduce using rule 27 (msg_fields -> .)
    FLOAT           reduce using rule 27 (msg_fields -> .)
    INT32           reduce using rule 27 (msg_fields -> .)
    INT64           reduce using rule 27 (msg_fields -> .)
    UINT32          reduce using rule 27 (msg_fields -> .)
    UINT64          reduce using rule 27 (msg_fields -> .)
    SINT32          reduce using rule 27 (msg_fields -> .)
    SINT64          reduce using rule 27 (msg_fields -> .)
    FIXED32         reduce using rule 27 (msg_fields -> .)
    FIXED64         reduce using rule 27 (msg_fields -> .)
    SFIXED32        reduce using rule 27 (msg_fields -> .)
    SFIXED64        reduce using rule 27 (msg_fields -> .)
    MAP             reduce using rule 27 (msg_fields -> .)

    msg_fields                     shift and go to state 45

state 43

    (18) option -> OPTION IDENTIFIER = LITERAL .

    LINE_END        reduce using rule 18 (option -> OPTION IDENTIFIER = LITERAL .)


state 44
